# sysadapt

./: CMakeLists.txt  README.md
include/: local_unistd_32.h  syscall_32.h  tracer.h
src/: runner.c  syscall_32.c  tracer.c
